# saklas

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  AUDIT.md  AUDIT_2.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  design-qa.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_architecture.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: FITTING_SWEEP_2026-07-09.md
benchmarks/fixtures/: jlens_prompts.txt
docs/notes/: extraction-pipeline-experiments.md  fingerprint-instability.md
docs/plans/: audit-followups.md  auto-manifold-fitting.md  dynamic-roles.md  generation-pipeline-overhaul.md  loom.md  manifold-composition.md  persona-manifold-anchoring.md  sae-pillar.md  webui-overhaul.md
docs/research/: block-sparse-featurizers-2026-07.md  interp-avenues-2026-07.md
examples/: README.md  ab_compare.py  manifold_steering.py  sweep_alpha.py
examples/representation_geometry/: README.md  analyze.py  author.py  compare.py  data.py  plot_3d.py  score.py
liahona/: __init__.py  cli.py  datasource.py  generation.py  model.py  monitor.py  probes_bootstrap.py  server.py  session.py  vectors.py
liahona/tui/: app.py  styles.tcss  trait_panel.py  vector_panel.py
saklas/: __init__.py  __main__.py  _server_runner.py  cache_ops.py  cli.py  cloning.py  config_file.py  datasource.py  generation.py  hf.py  hooks.py  merge.py  model.py  monitor.py  ollama_api.py  packs.py  probes_bootstrap.py  profile.py  results.py  saklas_api.py  server.py  session.py  vectors.py
saklas/cli/: AGENTS.md  CLAUDE.md  alpha_grid.py  config_file.py  main.py  parsers.py  runners.py  selectors.py
saklas/core/: AGENTS.md  CLAUDE.md  capture.py  cuda_graphs.py  errors.py  events.py  extraction.py  generation.py  generation_finalizer.py  histogram.py  hooks.py  jlens.py  joint_logprobs.py  loom.py  loom_diff.py  mahalanobis.py  manifold.py  measurements.py  model.py  monitor.py  monitor_attach.py  naming.py  naturalness.py  profile.py  results.py  role_templates.py  sae.py  sae_training.py  sampling.py  scene.py  scoring.py  seats.py  session.py  stats.py  steering.py  steering_composer.py  steering_expr.py  token_callback.py  token_payloads.py  transcript.py  (+3 more)
saklas/data/: baseline_prompts.json  neutral_statements.json
saklas/io/: AGENTS.md  CLAUDE.md  alignment.py  atomic.py  bake.py  cache_ops.py  cloning.py  datasource.py  gguf_io.py  hf.py  hf_manifolds.py  lens.py  lens_sources.py  manifold_authoring.py  manifold_folder.py  manifold_lifecycle.py  manifold_tensors.py  manifolds.py  merge.py  packs.py  paths.py  probes_bootstrap.py  sae.py  sae_artifacts.py  selectors.py  session_store.py  staging.py  templates.py
saklas/notebook/: __init__.py  data.py  plots.py
saklas/server/: AGENTS.md  CLAUDE.md  app.py  background_job.py  experiment_models.py  experiment_routes.py  instrument_routes.py  lens_routes.py  manifold_probe_routes.py  manifold_routes.py  model_names.py  native_common.py  native_routes.py  ollama.py  pack_routes.py  probe_routes.py  profile_models.py  profile_routes.py  request_helpers.py  sae_routes.py  saklas_api.py  session_models.py  session_routes.py  sse.py  streaming.py  template_routes.py  traits_routes.py  tree_models.py  tree_routes.py  vector_models.py  vector_routes.py  ws_events.py  ws_models.py  ws_stream.py
saklas/tui/: AGENTS.md  CLAUDE.md  app.py  chat_panel.py  commands.py  extraction_controller.py  (+9 more)
scripts/: _bundled_manifold_data.py  alpha_sweep_angry.py  alpha_sweep_open_ended.py  alpha_sweep_personas_rotate.py  alpha_sweep_post_drop.py  anchor_personas_to_default.py  benchmark_fitting.py  check_static_mask_correctness.py  compare_archive_vs_default.py  compare_n_angry.py  concept_three_way.py  convert_bundled_vectors_to_manifolds.py  explore_months_pca.py  extract_two_probes.py  fuzzy_pad_eval.py  fuzzy_pad_reverify.py  happy_sad_prefill_vs_generation.py  happy_sad_steering_comparison.py  happy_sad_three_way.py  measure_compile.py  measure_pertoken_paths.py  measure_stride2.py  measure_stride_context.py  monopolar_baseline_result.json  monopolar_baseline_test.py  months_12b_naive_pca.py  months_pringle.py  months_seasonal_fit.py  pair_count_test.py  persona_default_mode_experiment.py  profile_hotpath.py  profile_pertoken.py  prototype_open_scenarios.py  regenerate_bundled.py  regenerate_bundled_discover_manifold.py  regenerate_bundled_manifold.py  regenerate_bundled_statements.py  run_personas_anchor_pipeline.sh  test_french_hypothesis.py  try_slim_prompts.py  (+3 more)
steer/: __init__.py  __main__.py  cli.py  generation.py  hooks.py  model.py  monitor.py  probes_bootstrap.py  server.py  session.py  vectors.py
steer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: _fakes.py  _generation_stream.py  _jlens_toys.py  _whitener.py  conftest.py  test_ablation.py  test_alignment.py  test_alpha_grid.py  test_angular_budget_redistribute.py  test_angular_hook.py  test_architecture_dispatch.py  test_atomic.py  test_bake.py  test_batch.py  test_boundary_guard.py  test_bundled_templates.py  test_cache_ops.py  test_canonical_name.py  test_capture.py  test_cast.py  test_cli_eight_verbs.py  test_cli_flags.py  test_cli_manifold.py  test_cli_manifold_fold.py  test_cli_seven_verbs.py  test_cli_verbs.py  test_cloning.py  test_codex_review_regressions.py  test_compile_capture_modes.py  test_concept_statements_gen.py  test_config_file.py  test_cuda_graphs.py  test_datasource.py  test_diagnostics.py  test_dim_extraction.py  test_events.py  test_extraction_pipeline.py  test_fold.py  test_format_version.py  test_gen_state.py  (+103 more)
webui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+801 files in other folders)
