[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saklas"
dynamic = ["version"]
description = "Activation steering and trait monitoring for HuggingFace transformers"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{name = "a9lim", email = "mx@a9l.im"}]
requires-python = ">=3.11"
keywords = [
    "activation-steering",
    "representation-engineering",
    "interpretability",
    "mechanistic-interpretability",
    "transformers",
    "huggingface",
    "llm",
    "openai-api",
    "ollama",
    "sae",
    "probing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.2",
    # >=5.10: gemma4_unified (the Gemma-4 unified arch, a tested arch) lands in
    # the 5.10 line; 5.8/5.9 only ship the non-unified gemma4 and fail to load it.
    "transformers>=5.10",
    "accelerate>=0.27",
    "safetensors>=0.7.0",
    "sae-lens>=6.0,<7.0",
    "nltk>=3.10.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.44.0",
]

[project.urls]
Homepage = "https://github.com/a9lim/saklas"
Repository = "https://github.com/a9lim/saklas"
Issues = "https://github.com/a9lim/saklas/issues"
Releases = "https://github.com/a9lim/saklas/releases"

[project.optional-dependencies]
flash = ["flash-attn>=2.5"]
cuda = ["bitsandbytes>=0.43", "kernels>=0.12"]
cuda-experimental = ["bitsandbytes>=0.43", "kernels>=0.12", "flash-attn>=2.5"]
dev = ["build>=1.2", "pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27", "ruff>=0.6.9", "pyright>=1.1.400"]
hf = ["datasets>=2.0"]
gguf = ["gguf>=0.10"]
pandas = ["pandas>=3.0.2"]
research = [
    "datasets>=2.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=3.0.2",
    "pillow>=10",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]
notebook = ["plotly>=5.0", "pandas>=3.0.2", "kaleido>=0.2"]

[project.scripts]
saklas = "saklas.cli.main:main"

[tool.pytest.ini_options]
markers = [
    "gpu: requires a CUDA or MPS backend (deselect with `-m \"not gpu\"`)",
]
filterwarnings = [
    # Python 3.14 flags SWIG-generated builtin types in transitive C deps
    # (scipy/PIL). Not saklas code and nothing we can fix upstream.
    "ignore:builtin type Swig(Py(Packed|Object)|varlink) has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "T20"]
ignore = ["E501", "E741", "E402", "E731"]

[tool.ruff.lint.per-file-ignores]
# CLI runners and the cli/output.py presentation layer are the
# canonical print-to-stdout sites; T20 (flake8-print) is meant to
# catch debug-print leakage in the engine, IO, and server.
"saklas/cli/*" = ["T20"]
# Maintenance/benchmark scripts are stand-alone and intentionally
# print to stdout for diagnostic output and progress reporting.
"scripts/*" = ["T20"]
# Examples are runnable demos that print results.
"examples/*" = ["T20"]

# Pyright — whole-project type checking.  Historically scoped to the
# public-API surface because the engine/CLI/server layers lean on
# torch/transformers/fastapi internals whose stubs are uneven;
# the maintained library, tests, examples, and utility scripts are now fully
# annotated, so the rules below hold across those surfaces.
#
# ``standard`` mode (rather than ``strict``) is deliberate: ``strict``
# turns on ``reportUnknown*`` and those fire constantly on legitimate
# ``Tensor.norm()`` / ``Tensor.item()`` calls because torch's type stubs
# are partial.  We escalate the rules that actually catch bugs (missing
# parameter types, missing type arguments, attribute access, argument /
# call / return / assignment issues) to error; the irreducible torch
# stub-gap noise (private re-exports) stays at warning.
[tool.pyright]
include = [
    "saklas",
    "tests",
    "scripts",
    "examples",
]
exclude = ["**/__pycache__", "**/node_modules"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportMissingImports = "warning"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportAttributeAccessIssue = "error"
reportArgumentType = "error"
reportCallIssue = "error"
reportReturnType = "error"
reportAssignmentType = "error"
reportUnnecessaryIsInstance = "warning"
# torch re-exports `dtype`, `device`, `float32`, `dot` etc. through
# its public namespace, but its stubs don't list them in __all__.
# Newer pyright treats that as a private-import error; downgrade to
# warning so legitimate public API references don't break CI.
reportPrivateImportUsage = "warning"

[tool.setuptools.dynamic]
# Single literal lives in saklas/__init__.py; setuptools reads it via AST
# parsing without executing the module (so the eager torch re-export at
# saklas/__init__.py doesn't fire at build time).  The CI ``build`` job
# in .github/workflows/ci.yml is the validation gate.
version = {attr = "saklas.__version__"}

[tool.setuptools.packages.find]
include = ["saklas*"]

[tool.setuptools.package-data]
saklas = [
    "data/**/*.json",
    "py.typed",
    "web/dist/index.html",
    "web/dist/assets/*",
]
